--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "relation"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/jewlexx/relation"
+license = "MIT"
+description = "A simple library based on the mathematical concept of financial relations"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
