--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "relation"
 version = "0.1.0"
 edition = "2021"
+categories = ["mathematics", "no-std"]
 keywords = ["no_std", "mathematics"]
 repository = "https://github.com/jewlexx/relation"
 license = "MIT"
